# BoooBy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
assets/tiles/: mossy_tileset_config.json
docs/: Mossy_Tileset_Reference.md  tileset_viewer.html
include/: AnimatedSprite.hpp  Camera.hpp  CharacterSelection.hpp  Door.hpp  Enemy.hpp  Game.hpp  Level.hpp  LevelEditor.hpp  ParticleSystem.hpp  PauseMenu.hpp  Player.hpp  TileProperties.hpp  Tilemap.hpp
levels/: current_level.json  level_1.json  level_2.json  level_3.json  level_4.json  level_5.json  level_8.json  prologue.json
src/: AnimatedSprite.cpp  Camera.cpp  CharacterSelection.cpp  Door.cpp  Enemy.cpp  Game.cpp  Level.cpp  LevelEditor.cpp  ParticleSystem.cpp  PauseMenu.cpp  Player.cpp  TilePropertiesManager.cpp  Tilemap.cpp  main.cpp
